--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,14 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="base">
     <!-- Top Line section -->
-    <header class="class-for-header">
+    <!-- <header class="class-for-header">
       <div class="container-header container">
         <nav class="link logo">
           <a class="web link" href="./index.html"
@@ -49,7 +49,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Hero image -->
       <section class="hero">
@@ -64,7 +64,7 @@
         </div>
       </section>
       <!-- Section 2 -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="visually-hidden">section2</h2>
           <ul class="list container-quality">
@@ -118,10 +118,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       `
       <!-- Section 3 -->
-      <section class="images">
+      <!-- <section class="images">
         <div class="container">
           <h2 class="work-name">What are we doing</h2>
           <ul class="list container-images">
@@ -151,9 +151,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 4 -->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="work-name">Our Team</h2>
           <ul class="list container-team">
@@ -327,9 +327,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Section 5-->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="work-name">Customers</h2>
           <ul class="list container-quality-icons">
@@ -377,10 +377,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Footer section -->
-    <footer class="foter">
+    <!-- <footer class="foter">
       <div class="container ftr">
         <div class="ftr-text">
           <a class="web link logo-footer" href="./index.html"
@@ -445,9 +445,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!--модальне вікно-->
-    <div data-modal class="backdrop is-hidden">
+    <!-- <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-but" data-modal-close type="button">
           <svg class="modal-but-icon" width="8" height="8">
@@ -513,7 +513,6 @@
             ></textarea>
           </div>
           <div class="checkbox-container">
-            <!--поставить дефолтний клас винпут нижче -->
             <input
               class="modal-checkbox-wind visually-hidden"
               type="checkbox"
@@ -541,6 +540,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
