--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
       <!-- Section 2 -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">section2</h2>
           <ul class="list container-quality">
@@ -118,10 +118,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       `
       <!-- Section 3 -->
-      <!-- <section class="images">
+      <section class="images">
         <div class="container">
           <h2 class="work-name">What are we doing</h2>
           <ul class="list container-images">
@@ -151,9 +151,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 4 -->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="work-name">Our Team</h2>
           <ul class="list container-team">
@@ -327,7 +327,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Section 5-->
       <!-- <section class="section">
         <div class="container">
