--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 height="260"
               />
               <div class="team-techskill">
-                <h3 class="quality-name people-name">Mark Guerrero</h3>
-                <p class="quality-text people-skill">Product Designer</p>
+                <h3 class="people-name">Mark Guerrero</h3>
+                <p class="people-skill">Product Designer</p>
                 <ul class="list social-contact">
                   <li class="social-contact-fone">
                     <a class="social-contact-link" href="">
@@ -207,8 +207,8 @@
                 height="260"
               />
               <div class="team-techskill">
-                <h3 class="quality-name people-name">Tom Ford</h3>
-                <p class="quality-text people-skill">Frontend Developer</p>
+                <h3 class="people-name">Tom Ford</h3>
+                <p class="people-skill">Frontend Developer</p>
                 <ul class="list social-contact">
                   <li class="social-contact-fone">
                     <a class="social-contact-link" href="">
@@ -249,8 +249,8 @@
                 height="260"
               />
               <div class="team-techskill">
-                <h3 class="quality-name people-name">Camila Garcia</h3>
-                <p class="quality-text people-skill">Marketing</p>
+                <h3 class="people-name">Camila Garcia</h3>
+                <p class="people-skill">Marketing</p>
                 <ul class="list social-contact">
                   <li class="social-contact-fone">
                     <a class="social-contact-link" href="">
@@ -291,8 +291,8 @@
                 height="260"
               />
               <div class="team-techskill">
-                <h3 class="quality-name people-name">Daniel Wilson</h3>
-                <p class="quality-text people-skill">UI Designer</p>
+                <h3 class="people-name">Daniel Wilson</h3>
+                <p class="people-skill">UI Designer</p>
                 <ul class="list social-contact">
                   <li class="social-contact-fone">
                     <a class="social-contact-link" href="">
@@ -329,7 +329,7 @@
         </div>
       </section>
       <!--Section 5-->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="work-name">Customers</h2>
           <ul class="list container-quality-icons">
@@ -377,13 +377,13 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Footer section -->
-    <!-- <footer class="foter">
+    <footer class="foter">
       <div class="container ftr">
         <div class="ftr-text">
-          <a class="web link logo-footer" href="./index.html"
+          <a class="web-footer link" href="./index.html"
             >Web<span class="studio-footer">Studio</span></a
           >
           <p class="text-footer">
@@ -391,7 +391,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="social-ftr">
           <p class="social-name-ftr">Social media</p>
           <ul class="list social-contact-ftr">
             <li class="social-contact-fone-ftr">
@@ -445,7 +445,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!--модальне вікно-->
     <!-- <div data-modal class="backdrop is-hidden">
       <div class="modal">
